fixed white spaces and line breaks

--- a/proj5/social/network/static/network/styles.css
+++ b/proj5/social/network/static/network/styles.css
@@ -1,6 +1,5 @@
-#past-posts .content {
-    white-space: pre-wrap;
-    word-break: break-word;
+#past-posts .past-post {
+    padding: 5px;
 }
 
 #past-posts .edit-post {
